hackl is almost network is bad

--- a/hack/config.ini
+++ b/hack/config.ini
@@ -150,7 +150,7 @@ border-bottom-size = 2
 border-bottom-color = ${color.primary}
 modules-left = launcher sep title
 modules-center = workspaces
-modules-right = color-switch sep battery sep checknet sep date sep sysmenu
+modules-right = color-switch sep battery sep speed sep checknet sep backlight sep pulseaudio sep keyboard sep date sep powermenu
 enable-ipc = true
 
 [bar/bottom]
@@ -158,9 +158,9 @@ inherit = bar/main
 bottom = true
 border-top-size = 2
 border-top-color = ${color.primary}
-modules-left = mpd
-modules-center = cpu sep memory sep filesystem sep temperature sep updates sep speed
-modules-right = volume sep brightness
+modules-left = 
+modules-center = cpu sep memory sep filesystem sep temperature sep updates
+modules-right = 
 enable-ipc = true
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
