--- a/cuts/modules.ini
+++ b/cuts/modules.ini
@@ -94,7 +94,7 @@ type = internal/backlight
 ; Use the following command to list available cards:
 ; $ ls -1 /sys/class/backlight/
 ;card = intel_backlight
-card = amdgpu_bl0
+card = intel_backlight
 
 ; Available tags:
 ;   <label> (default)
@@ -764,7 +764,7 @@ interface = wlp3s0
 ; Normal Module
 [module/network]
 type = internal/network
-interface = wlan0
+interface = wlp3s0
 
 ; Seconds to sleep between updates
 ; Default: 1
@@ -925,7 +925,7 @@ thermal-zone = 0
 ; to find path to desired file
 ; Default reverts to thermal zone setting
 ;;hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
-hwmon-path = /sys/devices/pci0000:00/0000:00:01.3/0000:01:00.0/hwmon/hwmon0/temp1_input
+hwmon-path = /sys/devices/virtual/thermal/thermal_zone1/hwmon6/temp1_input
 
 ; Threshold temperature to display warning label (in degrees celsius)
 ; Default: 80
