--- a/hack/modules.ini
+++ b/hack/modules.ini
@@ -1074,7 +1074,7 @@ format = <label>
 ;   %title%
 ; Default: %title%
 label = "%title%"
-label-maxlen = 30
+label-maxlen = 45
 
 ; Used instead of label when there is no window title
 label-empty = Desktop
@@ -1161,3 +1161,11 @@ label-occupied-padding = 2
 label-empty-padding = 2
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/polywins]
+type = custom/script
+exec = ~/.config/polybar/hack/scripts/polywins.sh 2>/dev/null
+format = <label>
+label = %output%
+label-padding = 1
+tail = true
