--- a/hack/config.ini
+++ b/hack/config.ini
@@ -148,7 +148,7 @@ font-1 = "Iosevka Nerd Font:pixelsize=12;4"
 inherit = bar/main
 border-bottom-size = 2
 border-bottom-color = ${color.primary}
-modules-left = launcher sep title
+modules-left = launcher sep polywins
 modules-center = workspaces
 modules-right = color-switch sep battery sep speed sep checknet sep backlight sep pulseaudio sep keyboard sep date sep powermenu
 enable-ipc = true
@@ -158,7 +158,7 @@ inherit = bar/main
 bottom = true
 border-top-size = 2
 border-top-color = ${color.primary}
-modules-left = 
+modules-left = title
 modules-center = cpu sep memory sep filesystem sep temperature sep updates
 modules-right = 
 enable-ipc = true
