xubuntu powermenu options

--- a/hack/config.ini
+++ b/hack/config.ini
@@ -150,7 +150,7 @@ border-bottom-size = 2
 border-bottom-color = ${color.primary}
 modules-left = launcher sep title
 modules-center = workspaces
-modules-right = color-switch sep battery sep speed sep checknet sep backlight sep pulseaudio sep keyboard sep date sep powermenu
+modules-right = color-switch sep speed sep checknet sep backlight sep pulseaudio sep battery sep keyboard sep date sep sysmenu
 enable-ipc = true
 
 [bar/bottom]
