--- a/hack/modules.ini
+++ b/hack/modules.ini
@@ -131,7 +131,7 @@ adapter = ACAD
 ; Disable polling by setting the interval to 0.
 ;
 ; Default: 5
-poll-interval = 2
+poll-interval = 5
 
 ; see "man date" for details on how to format the time string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
@@ -622,7 +622,7 @@ format-prefix = 
 ;   %gb_swap_free%
 ;   %gb_swap_used%
 
-label = " %mb_used%"
+label = " %percentage_used%"
 
 ; Only applies if <ramp-used> is used
 ;;ramp-used-0 = ${memory.used0}
