--- a/hack/modules.ini
+++ b/hack/modules.ini
@@ -376,7 +376,7 @@ time = " %I:%M %p"
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
 ;;date-alt = %A, %d %B %Y
-time-alt = " %a, %d %b %Y"
+time-alt = " %a, %Y. %b. %d."
 
 ; Available tags:
 ;   <label> (default)
